<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>4dViewer</groupId>
  <artifactId>4dViewer</artifactId>
  <packaging>jar</packaging>
  <version>1.5</version>
  <name>4dViewer</name>
  <dependencies>
    <dependency>
    	<groupId>junit</groupId>
    	<artifactId>junit</artifactId>
    	<version>4.8.1</version>
    	<type>jar</type>
    	<scope>test</scope>
    </dependency>
  </dependencies>
  <build>
  	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>2.0.2</version>
			<configuration>
				<source>1.6</source>
				<target>1.6</target>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.4.2</version>
			<configuration>
				<argLine>-Xmx1024m</argLine>
				<argLine>-Xms1024m</argLine>
				<argLine>-XX:MaxPermSize=1024m</argLine>
				<argLine>-XX:+UseConcMarkSweepGC</argLine>
				<argLine>-XX:+CMSPermGenSweepingEnabled</argLine>
				<argLine>-XX:+CMSClassUnloadingEnabled</argLine>
			</configuration>
		</plugin>     
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>2.3</version>
			<configuration>
				<archive>
					<manifest>
						<mainClass>com.viewer4d.gui.Viewer4DFrame</mainClass>
					</manifest>
				</archive>
			</configuration>
		</plugin>
  	</plugins>
  </build>
</project>
